making a token for auth

--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.0",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
