--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@upstash/redis": "^1.35.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
