--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.35.0",
+    "@vis.gl/react-maplibre": "^8.0.4",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "lucide-react": "^0.513.0",
+    "maplibre-gl": "^5.7.1",
     "next": "15.3.3",
     "pg": "^8.16.0",
     "react": "^19.0.0",
