WIP: validate coor mark if inside highlighted city

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "@upstash/redis": "^1.35.0",
     "@vis.gl/react-maplibre": "^8.0.4",
     "bcrypt": "^6.0.0",
