--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@turf/turf": "^7.2.0",
+    "@types/geojson": "^7946.0.16",
     "@upstash/redis": "^1.35.0",
     "@vis.gl/react-maplibre": "^8.0.4",
     "bcrypt": "^6.0.0",
