--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
+    "@mui/x-charts": "^8.12.0",
     "@turf/turf": "^7.2.0",
     "@types/geojson": "^7946.0.16",
     "@upstash/redis": "^1.35.0",
