added the sign up and sign in of agticulturist(everyone can still sign up)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
@@ -26,6 +27,7 @@
     "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "svix": "^1.77.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
