--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^19.0.0",
     "svix": "^1.77.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
