--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,7 +23,7 @@
     "cookie": "^1.0.2",
     "lucide-react": "^0.513.0",
     "maplibre-gl": "^5.7.1",
-    "next": "15.3.3",
+    "next": "^16.0.7",
     "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
